[FE-14][bug] fix background darkness on iphone

--- a/src/styles/Animes.module.scss
+++ b/src/styles/Animes.module.scss
@@ -1,7 +1,6 @@
 .background {
   background-size: auto 400px;
-  background-repeat: no-repeat;
-  background-position: top;
+  background-blend-mode: darken;
 }
 
 .titleContainer {
